name:                pure-timediff-simple
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-timediff-simple
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.9 && < 5,
    pure >= 0.7 && < 1,
    pure-default >= 0.7 && < 1,
    pure-json >= 0.7 && < 1

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.TimeDiff

  default-language: Haskell2010